--- a/week3/scss/_base.scss
+++ b/week3/scss/_base.scss
@@ -1,94 +1,84 @@
 //week 3 紅眼鏡首頁
 
-$red: #AA0601;
+$red: #aa0601;
 $darkRed: #650300;
-$pink: #FBF2F2;
+$pink: #fbf2f2;
 
 .red {
-    color: $red;
+  color: $red;
 }
 
 .darkRed {
-    color: $darkRed;
+  color: $darkRed;
 }
 
 .white {
-    color: #FFF;
+  color: #fff;
 }
 
-
 .bg-red {
-    background-color: $red;
+  background-color: $red;
 }
 
 .bg-darkRed {
-    background-color: $darkRed;
+  background-color: $darkRed;
 }
 
 .bg-pink {
-    background-color: $pink;
+  background-color: $pink;
 }
 
 body {
-    font-family: 'Roboto', 'Noto Sans TC', system-ui, -apple-system, "PingFang TC", "Segoe UI", "Microsoft JhengHei", "微軟正黑體", "Helvetica Neue", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+  font-family: "Roboto", "Noto Sans TC", system-ui, -apple-system, "PingFang TC",
+    "Segoe UI", "Microsoft JhengHei", "微軟正黑體", "Helvetica Neue", Arial,
+    sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-
-
-
-
-
-
-
 
 //UI
 
 a {
-    &.dark-bg {
-        color: #FFF;
+  &.dark-bg {
+    color: #fff;
 
-        &:hover {
-            color: $pink;
-            font-weight: bold;
-            transform: translateY(-14px);
-        }
+    &:hover {
+      color: $pink;
+      font-weight: bold;
+      transform: translateY(-14px);
     }
+  }
 
-    &.white-bg {
-        color: $red;
+  &.white-bg {
+    color: $red;
 
-        &:hover {
-            color: $darkRed;
-            font-weight: bold;
-            transform: translateY(-2px);
-        }
+    &:hover {
+      color: $darkRed;
+      font-weight: bold;
+      transform: translateY(-2px);
     }
-
+  }
 }
 
-
-
-
 .imgBox {
+  width: fit-content;
+  height: auto;
+  overflow: hidden;
 
-    width: fit-content;
+  img {
+    width: 100%;
     height: auto;
-    overflow: hidden;
+    object-fit: cover;
     transition: transform 0.6s ease-in;
+  }
 
+  &.hover:hover {
     img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
+      transform: scale(1.2) translateY(-3px);
     }
-
-    &.hover:hover {
-        transform: scale(1.2) translateY(-3px);
-    }
+  }
 }
