--- a/week2/scss/_base.scss
+++ b/week2/scss/_base.scss
@@ -1,300 +1,294 @@
 body {
-    font-family: 'Bruno Ace SC', cursive, system-ui, -apple-system, "PingFang TC", "Segoe UI", "Microsoft JhengHei", "微軟正黑體", Roboto, "Helvetica Neue", Arial, sans-serif;
-    color: #15161D;
-    font-size: 16px;
-    line-height: 1.5;
+  font-family: "Bruno Ace SC", cursive, system-ui, -apple-system, "PingFang TC",
+    "Segoe UI", "Microsoft JhengHei", "微軟正黑體", Roboto, "Helvetica Neue",
+    Arial, sans-serif;
+  color: #15161d;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .container {
-    max-width: 1296px;
-    margin-inline: auto;
+  max-width: 1296px;
+  margin-inline: auto;
 }
 
 .bg-black {
-    background-color: #000;
+  background-color: #000;
 }
 
-
 a {
-    color: #FFF;
+  color: #fff;
 
-    &:hover {
-        color: #00FFA3;
-    }
+  &:hover {
+    color: #00ffa3;
+  }
 }
 
 h2 {
-    font-size: 64px;
+  font-size: 64px;
 }
 
 .imgBox {
-    overflow: hidden;
+  overflow: hidden;
 
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    transition: transform 0.6s ease-in-out;
+  }
+
+  &.hover:hover {
     img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        transition: transform 0.6s ease-in-out;
+      transform: scale(1.2) translate(-4px, -6px);
     }
+  }
 
-    &.hover:hover {
-        img {
-            transform: scale(1.2) translate(-4px, -6px);
-        }
+  &.hover2:hover {
+    img {
+      transform: translateY(-4px);
     }
-
-    &.hover2:hover {
-        img {
-            transform: translateY(-4px);
-        }
-    }
+  }
 }
-
-
 
 //--------page
 
-
-
 ul {
-    padding-top: 40px;
-    display: flex;
-    gap: 61px;
+  padding-top: 40px;
+  display: flex;
+  gap: 61px;
 
-    li:last-of-type {
-        width: 17.5%;
-        text-align: right;
-    }
+  li:last-of-type {
+    width: 17.5%;
+    text-align: right;
+  }
 
-    li:not(last-of-type) {
-        width: 27.5%
-    }
+  li:not(last-of-type) {
+    width: 27.5%;
+  }
 }
 
 .kvBanner {
-    color: #FFF;
-    padding-block: 72px;
+  color: #fff;
+  padding-block: 72px;
 
-    .container {
-        display: flex;
-        align-items: center;
-        column-gap: 24px;
-    }
+  .container {
+    display: flex;
+    align-items: center;
+    column-gap: 24px;
+  }
 
-    .imgBox,
-    .textBox {
-        width: 50%;
-    }
+  .imgBox,
+  .textBox {
+    width: 50%;
+  }
 
-    h1 {
-        font-size: 128px;
-        color: #00FFA3;
-        text-align: right;
-    }
+  h1 {
+    font-size: 128px;
+    color: #00ffa3;
+    text-align: right;
+  }
 }
 
 .intro {
-    padding-block: 160px;
-    background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/background-img.png?raw=true");
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #FFF;
+  padding-block: 160px;
+  background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/background-img.png?raw=true");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
 
-    .container {
-        display: flex;
-        column-gap: 24px;
+  .container {
+    display: flex;
+    column-gap: 24px;
+  }
+
+  .textBox {
+    width: 40%;
+  }
+
+  p {
+    font-size: 24px;
+    margin-block: 36px 32px;
+  }
+
+  .sparkleFlex {
+    display: flex;
+    column-gap: 16px;
+
+    .imgBox {
+      width: 32px;
     }
+  }
 
-    .textBox {
-        width: 40%;
+  .imgGrid {
+    width: 60%;
+    display: flex;
+    column-gap: 24px;
+
+    .imgBox {
+      width: 28%;
+      height: 600px;
+
+      &:last-of-type {
+        width: 44%;
+      }
+
+      img {
+        height: 100%;
+        width: auto;
+      }
     }
-
-    p {
-        font-size: 24px;
-        margin-block: 36px 32px;
-    }
-
-    .sparkleFlex {
-        display: flex;
-        column-gap: 16px;
-
-        .imgBox {
-            width: 32px;
-        }
-    }
-
-    .imgGrid {
-        width: 60%;
-        display: flex;
-        column-gap: 24px;
-
-        .imgBox {
-            width: 28%;
-            height: 600px;
-
-            &:last-of-type {
-                width: 44%;
-            }
-
-            img {
-                height: 100%;
-                width: auto;
-            }
-
-        }
-    }
-
-
+  }
 }
 
 .about {
-    padding-block: 160px;
+  padding-block: 160px;
 
-    .container {
-        display: flex;
-        column-gap: 10%;
-        align-items: center;
+  .container {
+    display: flex;
+    column-gap: 10%;
+    align-items: center;
+  }
+
+  .gridCard {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+
+  .card {
+    width: calc((100% - 24px) / 2);
+    padding: 16px;
+    border: 1px solid #e3e3e3;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.08);
+    display: flex;
+    flex-direction: column;
+    row-gap: 4px;
+  }
+
+  h4,
+  h3 {
+    font-size: 20px;
+  }
+
+  h2 {
+    margin-bottom: 36px;
+  }
+
+  .me {
+    width: 40%;
+
+    p {
+      font-size: 24px;
     }
-
-    .gridCard {
-        width: 50%;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 24px;
-    }
-
-    .card {
-        width: calc((100% - 24px) / 2);
-        padding: 16px;
-        border: 1px solid #E3E3E3;
-        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.08);
-        display: flex;
-        flex-direction: column;
-        row-gap: 4px;
-    }
-
-    h4,
-    h3 {
-        font-size: 20px;
-    }
-
-    h2 {
-        margin-bottom: 36px;
-    }
-
-    .me {
-        width: 40%;
-
-        p {
-            font-size: 24px;
-        }
-    }
+  }
 }
 
 .contact {
-    padding-block: 96px;
-    background: linear-gradient(180deg, #050014 0%, rgba(1, 2, 30, 0.89) 100%);
+  padding-block: 96px;
+  background: linear-gradient(180deg, #050014 0%, rgba(1, 2, 30, 0.89) 100%);
 
-    .container {
-        display: flex;
-        column-gap: 8.7%;
-        align-items: center;
+  .container {
+    display: flex;
+    column-gap: 8.7%;
+    align-items: center;
+  }
+
+  .textBox {
+    width: 50.7%;
+    display: flex;
+    column-gap: 16px;
+    align-items: center;
+  }
+
+  h2 {
+    color: #fff;
+  }
+
+  .imgGrid {
+    width: 40.6%;
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+
+    .imgBox {
+      width: calc((100% - 40px) / 3);
     }
-
-    .textBox {
-        width: 50.7%;
-        display: flex;
-        column-gap: 16px;
-        align-items: center;
-    }
-
-    h2 {
-        color: #FFF;
-    }
-
-    .imgGrid {
-        width: 40.6%;
-        display: flex;
-        column-gap: 20px;
-        align-items: center;
-
-    }
+  }
 }
 
 .projects {
-    padding-block: 160px;
+  padding-block: 160px;
 
-    h2 {
-        width: 57.6%;
-        margin-left: auto;
+  h2 {
+    width: 57.6%;
+    margin-left: auto;
+  }
+
+  .gridGroup {
+    margin-top: 16px;
+    display: flex;
+    column-gap: 24px;
+  }
+
+  .mainPic {
+    width: 33%;
+  }
+
+  .content {
+    width: 67%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 28px 24px;
+  }
+
+  .card {
+    display: flex;
+    column-gap: 24px;
+    width: 100%;
+
+    .imgBox {
+      width: 23.5%;
     }
 
-    .gridGroup {
-        margin-top: 16px;
-        display: flex;
-        column-gap: 24px;
+    .textBox {
+      width: 76.5%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
+  }
 
-    .mainPic {
-        width: 33%;
+  .btn {
+    border-radius: 32px;
+    padding: 12px 24px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    line-height: 1;
+
+    &::after {
+      content: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward-white.png?raw=true");
+      margin-left: 4px;
     }
+  }
 
-    .content {
-        width: 67%;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 28px 24px;
-    }
+  .app {
+    width: 35.75%;
+  }
 
-    .card {
-        display: flex;
-        column-gap: 24px;
-        width: 100%;
-
-        .imgBox {
-            width: 23.5%;
-        }
-
-        .textBox {
-            width: 76.5%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-    }
-
-    .btn {
-        border-radius: 32px;
-        padding: 12px 24px;
-        display: flex;
-        align-items: center;
-        width: fit-content;
-        line-height: 1;
-
-
-        &::after {
-            content: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward-white.png?raw=true");
-            margin-left: 4px;
-        }
-    }
-
-    .app {
-        width: 35.75%;
-    }
-
-    .web {
-        width: calc(100% - 35.75% - 24px);
-    }
-
-
+  .web {
+    width: calc(100% - 35.75% - 24px);
+  }
 }
 
 footer {
-    text-align: center;
-    color: #FFF;
-    padding: 40px 312px;
+  text-align: center;
+  color: #fff;
+  padding: 40px 312px;
 }
