--- a/week2/scss/_base.scss
+++ b/week2/scss/_base.scss
@@ -218,6 +218,14 @@ ul {
 
     .imgBox {
       width: calc((100% - 40px) / 3);
+      border-radius: 40px;
+      &:hover {
+        box-shadow: 0px 0px 16px 3px rgba(144, 148, 255, 0.9),
+          0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      }
+      img {
+        width: 100%;
+      }
     }
   }
 }
