--- a/week3/scss/_base.scss
+++ b/week3/scss/_base.scss
@@ -73,6 +73,7 @@ a {
     width: 100%;
     height: auto;
     object-fit: cover;
+    object-position: center;
     transition: transform 0.6s ease-in;
   }
 
