--- a/week3/scss/style.css
+++ b/week3/scss/style.css
@@ -607,7 +607,7 @@ header li {
 }
 
 footer {
-  padding-block: 48px 32px;
+  padding-top: 48px;
 }
 footer .upperFooter {
   flex-direction: column;
@@ -643,12 +643,17 @@ footer .contactBtn:last-of-type .material-symbols-rounded {
   margin-right: 12px;
 }
 footer .bottomFooter {
-  padding-inline: 32px;
-  border-top: 1px solid #FFF;
+  margin-top: 32px;
+  padding-block: 32px;
+  border-top: 1px solid #fff;
+  justify-content: space-between;
+}
+footer .privacy {
+  margin-right: 48px;
 }
 @media (max-width: 991.988px) {
   footer {
-    padding-bottom: 40px;
+    padding-top: 40px;
   }
   footer .imgGrid {
     -moz-column-gap: 16px;
@@ -663,16 +668,22 @@ footer .bottomFooter {
 }
 @media (max-width: 575.98px) {
   footer {
-    padding-block: 24px;
+    padding-top: 24px;
   }
   footer .upperFooter {
-    justify-content: flex-end;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: flex-start;
   }
   footer .upperFooter ul {
     display: none;
   }
   footer .contactBtn {
+    margin-top: 8px;
     font-size: 16px;
+  }
+  footer .contactBtn:first-of-type {
+    margin-top: 0;
   }
   footer .contactBtn .material-symbols-rounded {
     font-size: 16px;
@@ -684,5 +695,14 @@ footer .bottomFooter {
   }
   footer .imgGrid .imgBox {
     width: 24px;
+  }
+  footer .bottomFooter {
+    margin-top: 20px;
+    flex-direction: column;
+    padding-block: 20px;
+  }
+  footer .privacy {
+    display: block;
+    margin-block: 8px;
   }
 }/*# sourceMappingURL=style.css.map */
